[project]
name = "ai-news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "fastapi>=0.128.6",
    "langchain>=1.2.9",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.8",
    "openai>=2.18.0",
    "playwright>=1.58.0",
    "pymongo>=4.16.0",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
    "uvicorn>=0.40.0",
]
